<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UserActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        android:paddingHorizontal="8dp">

        <TextView
            android:id="@+id/toolbarBackIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="center_vertical"
            android:text="@string/back"
            android:textColor="@color/blue"
            android:textSize="17sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_back_arrow"
            app:drawableTint="@color/blue" />

        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/users"
            android:textColor="@color/blue"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/toolbarUsersAddIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:gravity="center_vertical"
            android:text="@string/_0_25"
            android:textColor="@color/red"
            android:textSize="17sp"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/ic_add_icon" />

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/divider"
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>


    <EditText
        android:id="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/divider"
        android:layout_marginHorizontal="9dp"
        android:layout_marginVertical="5dp"
        android:background="@drawable/rounded_edit_text"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="5dp"
        android:hint="@string/search"
        android:inputType="text"
        android:maxLength="20"
        android:maxLines="1"
        android:paddingStart="5dp"
        android:singleLine="true" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchBar" />

</RelativeLayout>