<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".selectorActivity.SelectorCalenderManagement">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="top"
        android:background="@color/white"
        android:paddingHorizontal="8dp">

        <TextView
            android:id="@+id/backSelectorCalenderManagement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="center_vertical"
            android:text="@string/back"
            android:textColor="@color/blue"
            android:textSize="17sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_back_arrow"
            app:drawableTint="@color/blue" />

        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/entity_to_view_calender"
            android:textColor="@color/blue"
            android:textSize="21sp"
            android:textStyle="bold" />


    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <EditText
        android:paddingStart="5dp"
        android:id="@+id/searchBarSelectorCalenderManagement"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="9dp"
        android:layout_marginVertical="5dp"
        android:background="@drawable/rounded_edit_text"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="5dp"
        android:maxLength="20"
        android:maxLines="1"
        android:singleLine="true"
        android:inputType="text"
        android:hint="@string/search" />

</LinearLayout>